<resources>
    <string name="app_name">barcrawler</string>

    <string name="go_to">I want to go to</string>
    <string name="barNumber">0</string>
    <string name="bars">bars</string>
    <string name="go_button">Go</string>


    <string name="loading_error_message">Whoops. We could not get your bars. Check your internet connection</string>


    <!-- Strings for price pref -->
    <string name="pref_price_key" translatable="false">pref_price</string>
    <string name="pref_price_title">Price Range</string>
    <string name="pref_price_1">$</string>
    <string name="pref_price_2">$$</string>
    <string name="pref_price_3">$$$</string>
    <string name="pref_price_4">$$$$</string>
    <string name="pref_price_1_value" translatable="false">1</string>
    <string name="pref_price_2_value" translatable="false">2</string>
    <string name="pref_price_3_value" translatable="false">3</string>
    <string name="pref_price_4_value" translatable="false">4</string>
    <string name="pref_price_default_value" translatable="false">1,2,3,4</string>


    <!-- Strings for location pref -->
    <string name="pref_location_key" translatable="false">pref_location</string>
    <string name="pref_location_title">Current Location</string>
    <string name="pref_location_default_value">Corvallis, OR, US</string>

    <!-- Strings for radius pref -->
    <string name="pref_radius_key" translatable="false">pref_radius</string>
    <string name="pref_radius_title">Radius of Search</string>
    <string name="pref_radius_default_value">100</string>

    <!-- Strings for open now pref -->
    <string name="pref_open_now_key" translatable="false">pref_open_now</string>
    <string name="pref_open_now_title">Open Now</string>
    <string name="pref_open_now_default_value">true</string>
    <string name="pref_open_now_yes">Yes</string>
    <string name="pref_open_now_no">No</string>
    <string name="pref_open_now_true">true</string>
    <string name="pref_open_now_false">false</string>

    <string name="action_settings">Settings</string>
    <string name="action_route">Crawl Route</string>

</resources>
